Added JWT & Security Configurations